--- a/SisFiespApplication/Views/Avaliacoes/_partialAvaliacao.cshtml
+++ b/SisFiespApplication/Views/Avaliacoes/_partialAvaliacao.cshtml
@@ -28,6 +28,9 @@
                                             <a href="#">
                                                 <i class="icofont icofont-ui-user"></i><span>@avaliacaoDetalhe.EspecialistaNome</span>
                                             </a>
+                                            <a data-toggle="modal" data-target="#large-Modal2">
+                                                <i class="icofont icofont-file-word"></i><span></span>
+                                            </a>
                                             <p class="m-t-20"></p>
                                         </div>
                                     </div>
@@ -38,7 +41,7 @@
                         }
                     }
 
-                    
+
 
                     <div class="modal fade" id="large-Modal" tabindex="-1" role="dialog">
                         <div class="modal-dialog modal-lg" role="document">
@@ -56,6 +59,51 @@
                             <!-- cd-timeline -->
                         </div>
                     </div>
+
+                    <div class="modal fade" id="large-Modal2" tabindex="-1" role="dialog">
+                        <div class="modal-dialog modal-lg" role="document">
+                            <div class="modal-content">
+
+                                @*<div id="modaldetalheAvaliacao"></div>
+                <script>
+        $.get('@Url.Action("PartialDetalheAvaliacao", "Avaliacoes")', { id: 0 }, function (content) {
+            $("#modaldetalheAvaliacao").html(content);
+        });
+                </script>
+            </div>*@
+
+                                <div class="modal-header">
+                                    <h4 class="modal-title"></h4>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">×</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body">
+                                    <form>
+                                        <div class="row">
+                                            <div class="col-sm-12">
+                                                <h4 class="sub-title">Anexos</h4>
+                                                <div class="form-group row">
+                                                    <label class="col-sm-2 col-form-label">Upload File</label>
+                                                    <div class="col-sm-10">
+                                                        <input type="file" class="form-control">
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>                                        
+                                    </form>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-default waves-effect " data-dismiss="modal">Fechar</button>
+                                    <button type="button" class="btn btn-primary waves-effect waves-light " data-dismiss="modal" onclick="salvarAvaliacaoDetalhe()">Salvar</button>
+                                </div>
+
+
+                                <!-- cd-timeline-block -->
+                                <!-- cd-timeline -->
+                            </div>
+                    </div>
+
                 </div>
             </div>
         </div>
