--- a/SisFiespApplication/Views/Home/Index.cshtml
+++ b/SisFiespApplication/Views/Home/Index.cshtml
@@ -41,7 +41,7 @@
             <div class="col-md-12 col-xl-12">
                 <div class="card">
                     <div class="card-header">
-                        <h5>Statistics</h5>
+                        <h5>Estatísticas</h5>
                         <div class="card-header-left ">
                         </div>
                         <div class="card-header-right">
@@ -293,11 +293,4 @@
     </div>
 </div>
 
-
-
-
-
-
 <script type="text/javascript" src="~/assets/pages/dashboard/project-dashboard.js"></script>
-
-
