--- a/SisFiespApplication/Views/Avaliacoes/_partialAvaliacao.cshtml
+++ b/SisFiespApplication/Views/Avaliacoes/_partialAvaliacao.cshtml
@@ -13,9 +13,20 @@
                         foreach (var avaliacaoDetalhe in ViewData["ListaAvaliacaoDetalhe"] as IEnumerable<AvaliacaoDetalhe>)
                         {
                             <div class="cd-timeline-block">
-                                <div class="cd-timeline-icon bg-primary">
-                                    <i class="icofont icofont-ui-file"></i>
-                                </div>
+                                @if (@avaliacaoDetalhe.NomeArquivo != null)
+                                {
+                                    <div class="cd-timeline-icon bg-success" id="divbtDownloadSuc@{@avaliacaoDetalhe.Codigo} ">
+                                        <a><i class="icofont icofont-ui-file"></i> </a>
+                                        @*<a onclick="downloadArquivo('\\wwwroot\\tmp\\','@avaliacaoDetalhe.Codigo', '@avaliacaoDetalhe.NomeArquivo')"><i class="icofont icofont-ui-file"></i> </a>*@
+                                    </div>
+                                }
+                                else
+                                {
+                                    <div class="cd-timeline-icon bg-primary" id="divbtDownload@{@avaliacaoDetalhe.Codigo} ">
+                                        <a ><i class="icofont icofont-ui-file"></i> </a>
+                                    </div>
+                                }
+
                                 <div class="cd-timeline-content card_main">
                                     <a data-toggle="modal" data-target="#large-Modal" onclick="buscarDadosDetalhe(@avaliacaoDetalhe.Codigo)">
                                         <img src="~/assets/images/timeline/timeline1.jfif" class="img-fluid width-100" alt="">
@@ -28,8 +39,8 @@
                                             <a href="#">
                                                 <i class="icofont icofont-ui-user"></i><span>@avaliacaoDetalhe.EspecialistaNome</span>
                                             </a>
-                                            <a data-toggle="modal" data-target="#large-Modal2">
-                                                <i class="icofont icofont-file-word"></i><span></span>
+                                            <a data-toggle="modal" data-target="#large-Modal2" onclick="partialAnexos(@avaliacaoDetalhe.Codigo)">
+                                                <i class="icofont icofont-file-word"></i><span>Anexar arquivo</span>
                                             </a>
                                             <p class="m-t-20"></p>
                                         </div>
@@ -63,49 +74,20 @@
                     <div class="modal fade" id="large-Modal2" tabindex="-1" role="dialog">
                         <div class="modal-dialog modal-lg" role="document">
                             <div class="modal-content">
-
-                                @*<div id="modaldetalheAvaliacao"></div>
-                <script>
-        $.get('@Url.Action("PartialDetalheAvaliacao", "Avaliacoes")', { id: 0 }, function (content) {
-            $("#modaldetalheAvaliacao").html(content);
-        });
-                </script>
-            </div>*@
-
-                                <div class="modal-header">
-                                    <h4 class="modal-title"></h4>
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                        <span aria-hidden="true">×</span>
-                                    </button>
-                                </div>
-                                <div class="modal-body">
-                                    <form>
-                                        <div class="row">
-                                            <div class="col-sm-12">
-                                                <h4 class="sub-title">Anexos</h4>
-                                                <div class="form-group row">
-                                                    <label class="col-sm-2 col-form-label">Upload File</label>
-                                                    <div class="col-sm-10">
-                                                        <input type="file" class="form-control">
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>                                        
-                                    </form>
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-default waves-effect " data-dismiss="modal">Fechar</button>
-                                    <button type="button" class="btn btn-primary waves-effect waves-light " data-dismiss="modal" onclick="salvarAvaliacaoDetalhe()">Salvar</button>
-                                </div>
-
-
-                                <!-- cd-timeline-block -->
-                                <!-- cd-timeline -->
+                                <div id="modaldetalheAvaliacaoAnnexo"></div>
+                                <script>
+                                    $.get('@Url.Action("PartialAnexos", "Avaliacoes")', { id: 0 }, function (content) {
+                                        $("#modaldetalheAvaliacaoAnnexo").html(content);
+                                    });
+                                </script>
                             </div>
-                    </div>
+                        </div>
+                        </div>
 
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
