--- a/SisFiespApplication/Views/Avaliacoes/_partialDetalhe.cshtml
+++ b/SisFiespApplication/Views/Avaliacoes/_partialDetalhe.cshtml
@@ -73,8 +73,8 @@
         </form>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-default waves-effect " data-dismiss="modal">Fechar</button>
-        <button type="button" class="btn btn-primary waves-effect waves-light " data-dismiss="modal" onclick="salvarAvaliacaoDetalhe()">Salvar</button>
+        <button type="button" class="btn btn-default waves-effect " id="fecharModal" data-dismiss="modal">Fechar</button>
+        <button type="button" class="btn btn-primary waves-effect waves-light " onclick="salvarAvaliacaoDetalhe()">Salvar</button>
     </div>
 
 }
