--- a/SisFiespApplication/Views/Avaliacoes/_partialAnexo.cshtml
+++ b/SisFiespApplication/Views/Avaliacoes/_partialAnexo.cshtml
@@ -46,7 +46,7 @@
                                             @obj.Type
                                         </td>
                                         <td>
-                                            @Html.ActionLink("Baixar","Avaliacoes","Download", new { fileName = obj.File, codigo = obj.CodigoAvaliacaoDetalhe },new { @class = "btn btn-primary"})
+                                            @Html.ActionLink("Baixar","Download","Avaliacoes", new { fileName = obj.File, codigo = obj.CodigoAvaliacaoDetalhe },new { @class = "btn btn-primary"})
 
                                         </td>
                                     </tr>
@@ -100,13 +100,13 @@
     @*<button type="button" class="btn btn-primary waves-effect waves-light " data-dismiss="modal" onclick="salvarAvaliacaoDetalhe()">Salvar</button>*@
 </div>
 
-<script src="~/bower_components/datatables.net/js/jquery.dataTables.min.js"></script>
-<script src="~/bower_components/datatables.net-buttons/js/dataTables.buttons.min.js"></script>
+<script src="~/arquivos/datatables.net/js/jquery.dataTables.min.js"></script>
+<script src="~/arquivos/datatables.net-buttons/js/dataTables.buttons.min.js"></script>
 <script src="~/assets/pages/data-table/js/jszip.min.js"></script>
 <script src="~/assets/pages/data-table/js/pdfmake.min.js"></script>
 <script src="~/assets/pages/data-table/js/vfs_fonts.js"></script>
-<script src="~/bower_components/datatables.net-buttons/js/buttons.print.min.js"></script>
-<script src="~/bower_components/datatables.net-buttons/js/buttons.html5.min.js"></script>
-<script src="~/bower_components/datatables.net-bs4/js/dataTables.bootstrap4.min.js"></script>
-<script src="~/bower_components/datatables.net-responsive/js/dataTables.responsive.min.js"></script>
-<script src="~/bower_components/datatables.net-responsive-bs4/js/responsive.bootstrap4.min.js"></script>
+<script src="~/arquivos/datatables.net-buttons/js/buttons.print.min.js"></script>
+<script src="~/arquivos/datatables.net-buttons/js/buttons.html5.min.js"></script>
+<script src="~/arquivos/datatables.net-bs4/js/dataTables.bootstrap4.min.js"></script>
+<script src="~/arquivos/datatables.net-responsive/js/dataTables.responsive.min.js"></script>
+<script src="~/arquivos/datatables.net-responsive-bs4/js/responsive.bootstrap4.min.js"></script>
