--- a/SisFiespApplication/Views/Login/Index.cshtml
+++ b/SisFiespApplication/Views/Login/Index.cshtml
@@ -37,20 +37,23 @@
     <body class="fix-menu">
         <!-- Pre-loader start -->
         <div class="theme-loader">
-            <div class="ball-scale">
-                <div class='contain'>
-                    <div class="ring"><div class="frame"></div></div>
-                    <div class="ring"><div class="frame"></div></div>
-                    <div class="ring"><div class="frame"></div></div>
-                    <div class="ring"><div class="frame"></div></div>
-                    <div class="ring"><div class="frame"></div></div>
-                    <div class="ring"><div class="frame"></div></div>
-                    <div class="ring"><div class="frame"></div></div>
-                    <div class="ring"><div class="frame"></div></div>
-                    <div class="ring"><div class="frame"></div></div>
-                    <div class="ring"><div class="frame"></div></div>
-                </div>
+            @*<div class="ball-scale">
+            <div class='contain'>
+                <div class="ring"><div class="frame"></div></div>
+                <div class="ring"><div class="frame"></div></div>
+                <div class="ring"><div class="frame"></div></div>
+                <div class="ring"><div class="frame"></div></div>
+                <div class="ring"><div class="frame"></div></div>
+                <div class="ring"><div class="frame"></div></div>
+                <div class="ring"><div class="frame"></div></div>
+                <div class="ring"><div class="frame"></div></div>
+                <div class="ring"><div class="frame"></div></div>
+                <div class="ring"><div class="frame"></div></div>
             </div>
+        </div>*@
+            <svg id="loader2" viewBox="0 0 100 100">
+                <circle id="circle-loader2" cx="100" cy="100" r="90"></circle>
+            </svg>
         </div>
         <!-- Pre-loader end -->
 
